Fix tables horizontal overflow
Made tables scrollable horizonatlly
if their content overflows.

Related: #9998

--- a/weblate/static/style-bootstrap.css
+++ b/weblate/static/style-bootstrap.css
@@ -551,6 +551,11 @@ form + .login-label {
   height: 20px;
 }
 
+.table {
+  display: table;
+  overflow-x: auto;
+}
+
 .table-auth .auth-image {
   margin-right: 12px;
 }
